# RedMCP

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_finding.yml
.github/rulesets/: main.json
.github/workflows/: action-validate.yml  ci.yml  codeql-analysis.yml  publish-testpypi.yml  release.yml  test-gate.yml
.mcts/: policy.yaml.example
action/: README.md  action.yml
docs/: README.md  architecture.md  cli.md  competitive-positioning.md  external-frameworks.md  feature-expansion-plan.md  fuzzing.md  getting-started.md  html-report.md  index.md  inventory.md  product-positioning.md  roadmap.md  taxonomy.md  typescript-discovery.md
docs/analysis/: README.md  architecture.md  security-checks.md
docs/contributing/: README.md  issue-labeling.md
docs/get-started/: getting-started.md
docs/more/: feature-expansion-plan.md  product-positioning.md  roadmap.md
docs/platform/: README.md  ci-integration.md  cli.md  rest-api.md
docs/reporting/: findings-trust-phase0.md  html-report.md  interpreting-findings.md  scoring-guide.md  scoring-spec-v2.md  scoring-spec.md  taxonomy.md
docs/scanning/: fuzzing.md  live-scanning.md  static-snapshot.md
eval/behavioral/handlers/: py_delete.py
examples/bench/go-mcp-server/: main.go  server.go
examples/bench/multi-file-server/: server.py
examples/medium-risk-mcp-server/: server.py
examples/safe-mcp-server/: server.py
examples/vulnerable-mcp-server/: server.py
scripts/: cli_end_to_end.sh  cli_smoke.sh  compile_sigma_rules.py  enable-branch-protection.sh  import_scanner_eval.py  run_behavioral_regression.py  validate_trust_layer.py
src/mcpaudit/: __init__.py  __main__.py
src/mcpaudit/analyzers/: __init__.py  attack_chains.py  base.py  data_leakage.py  jailbreak.py  permissions.py  prompt_injection.py  tool_abuse.py
src/mcpaudit/brand/: __init__.py
src/mcpaudit/cli/: __init__.py  main.py
src/mcpaudit/compliance/: __init__.py  checks.py
src/mcpaudit/core/: __init__.py  config.py  scanner.py
src/mcpaudit/mcp/: __init__.py  client.py  models.py
src/mcpaudit/report/: __init__.py  data.py
src/mcpaudit/reporting/: __init__.py  html.py  models.py
src/mcpaudit/scoring/: __init__.py  engine.py
src/mcpaudit/ui/: __init__.py  dashboard.py  layout.py  logo.py  progress.py  report_renderer.py  theme.py
src/mcts/: __init__.py  _install_warning.py
src/mcts/analyzers/: attack_chains.py  behavioral_extraction.py  behavioral_static.py  cloud_inspect.py  command_execution.py  command_injection.py  cross_server.py  data_leakage.py  embedding_secrets.py  finding_facts.py  jailbreak.py  line_jumping.py  llm_judge.py  llm_metadata_triage.py  manifest_deps.py  metadata_diff.py  metadata_integrity.py  npm_audit.py  oauth_config.py  oauth_mixup.py  oauth_phishing.py  path_traversal.py  path_validation.py  prompt_defense.py  prompt_injection.py  runtime_events.py  sampling_abuse.py  schema_surface.py  semgrep_adapter.py  sigma_dedupe.py  sigma_metadata.py  skill_md.py  supply_chain.py  surface_context.py  surface_metadata.py  surfaces.py  tool_abuse.py  tool_classification.py  tool_output_injection.py  tool_redefinition.py  (+6 more)
src/mcts/api/: app.py  limits.py  live_consent.py  startup.py
src/mcts/brand/: README.md  __init__.py
src/mcts/capability/: inferrer.py
src/mcts/cli/: auto.py  doctor.py  machine_wide.py  main.py
src/mcts/compliance/: checks.py
src/mcts/core/: config.py  scanner.py
src/mcts/discovery/: config.py  instruction_files.py  live.py  live_config.py  onboarding.py  static_go.py  static_js.py  static_json.py  static_meta.py  static_runner.py  static_rust.py
src/mcts/fuzz/: __init__.py  classifier.py  runner.py  transport.py  transport_http.py
src/mcts/governance/: __init__.py  gate_violations.py  policy.py  scan_gates.py
src/mcts/inventory/: __init__.py  client_registry.py  discoverers.py  hitting_set.py  models.py  runner.py  scan_all.py  skills.py  targets.py
src/mcts/mcp/: client.py  models.py
src/mcts/mcp_server/: server.py
src/mcts/output/: __init__.py  analysis_dir.py  artifacts.py  history.py
src/mcts/pentest/: runner.py
src/mcts/probe/: auth.py  discovery_meta.py  errors.py  http_session.py  jailbreak.py  manifest.py  models.py  protocol_checks.py  (+3 more)
tests/: __init__.py  test_analysis_output.py  test_analyzers.py  test_api_limits.py  test_api_security.py  test_attack_graph.py  test_auto_scan.py  test_behavioral_eval.py  test_behavioral_regression.py  test_category_gates.py  test_cli_output_parity.py  test_cli_report.py  test_client_registry.py  test_compliance.py  test_config_discovery.py  test_crosswalk.py  test_doctor.py  test_embedding_secrets.py  test_fuzz.py  test_fuzz_remote.py  test_fuzz_startup.py  test_governance.py  test_html_report.py  test_import_scanner_eval.py  test_install_warning.py  test_instruction_discovery.py  test_inventory_scan_all_gates.py  test_jailbreak_live.py  test_layout.py  test_live_launch_validation.py  test_llm_metadata_triage.py  test_machine_wide.py  test_manifest_deps.py  test_mcp_client.py  test_mcp_server.py  test_module_taint.py  test_oauth_escalation.py  test_oauth_json_scope.py  test_onboarding.py  test_pentest.py  (+22 more)
tests/analyzers/: test_finding_builder_adoption.py  test_finding_facts.py  test_optional_analyzer_skips.py
tests/capability/: test_inferrer_signals.py
tests/governance/: test_gate_violations.py  test_policy_merge.py  test_trust_alignment_fixes.py
tests/reporting/: test_bronze_counterfactual.py  test_consistency_wedge.py  test_display.py  test_evidence_provenance.py  test_finding_validator.py  test_hygiene_bronze_facts.py  test_legacy_evidence_facts.py  test_runtime_evidence.py  test_sarif_coverage_v2.py  test_sarif_trust.py  test_scanner_trust.py  test_trust_gates.py  test_trust_pipeline.py
tests/scoring/: test_category_scores_v2.py  test_engine_v2.py  test_runtime_evidence_scoring.py  test_scoring_v2_trust.py  test_uncertainty.py
(+104 files in other folders)
