[project]
name = "mcp-mcts"
dynamic = ["version"]
description = "Model Context Threat Scanner — local MCP security scanning, attack chains, inventory, CI gates, and optional Semgrep/LLM analysis"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "MCP-Audit" },
]
requires-python = ">=3.11"
keywords = [
    "mcp",
    "mcts",
    "security",
    "red-team",
    "prompt-injection",
    "llm",
    "ai-agents",
    "reasoning",
    "agent",
    "search",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.9.0",
]
semantic = [
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
]
mcp = [
    "mcp>=1.27.2",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
yara = [
    "yara-python>=4.5.0",
]
llm = [
    "litellm>=1.80.0",
]
semgrep = [
    "semgrep>=1.60.0",
]
supplychain = [
    "pip-audit>=2.9.0",
]
sast = [
    "tree-sitter>=0.24.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
]
all = [
    "fastapi>=0.115.0",
    "mcp>=1.27.2",
    "numpy>=1.24.0",
    "pip-audit>=2.9.0",
    "sentence-transformers>=3.0.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "uvicorn>=0.32.0",
    "yara-python>=4.5.0",
    "litellm>=1.80.0",
    "semgrep>=1.60.0",
]

[project.scripts]
mcts = "mcts.cli.main:run"
mcts-mcp = "mcts.mcp_server.main:run"

[project.urls]
Homepage = "https://github.com/MCP-Audit/MCTS"
Documentation = "https://github.com/MCP-Audit/MCTS#readme"
Repository = "https://github.com/MCP-Audit/MCTS"
Issues = "https://github.com/MCP-Audit/MCTS/issues"
Changelog = "https://github.com/MCP-Audit/MCTS/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mcts/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcts"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "tests",
    "docs",
    "README.md",
    "LICENSE",
    "NOTICE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.9.0",
    "build>=1.2.0",
    "twine>=6.1.0",
    "httpx2>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: optional integration tests requiring mcp extra",
]

[tool.ruff]
target-version = "py311"
line-length = 110
src = ["src", "tests"]
extend-exclude = ["eval/behavioral/handlers/parity"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/mcts/cli/main.py" = ["UP045"]
"tests/fixtures/behavioral-eval/**/*.py" = ["F821"]

[tool.ruff.lint.isort]
known-first-party = ["mcts"]

[tool.coverage.run]
source = ["mcts"]
branch = true

[tool.coverage.report]
fail_under = 0
show_missing = true
